--- a/client/css/styles1.css
+++ b/client/css/styles1.css
@@ -13,8 +13,34 @@
 	font-size: 15px;
 }
 
-h1.center-align {
+h1.headerText { 
+	font-size: 2.8em;
+}
+
+.header {
 	margin-top: 0px;
 	margin-bottom: 0px;
-
+	color: #ffffff;
 }
+
+h1.headerTitle {
+	text-decoration: underline;
+}
+
+.header {
+	background-image: url('../img/bbq_meat_tray1.jpg');
+	max-height: 100%;
+	max-width: 100%;
+}
+
+
+
+/* 
+	color palette: 	(FRESH)
+	#c3d853	(195,216,83)
+	#6c853f	(108,133,63)
+	#6bb056	(107,176,86)
+	#3cc98d	(60,201,141)
+	#accc8f	(172,204,143)
+
+*/
